=== 1.72.1 2009-10-XX
* N major enhancements:
  * easily manipulate javascript objects from ruby (NativeObject)
  * make NativeObject Enumerable
  * to_h and to_json for NativeObject

=== 1.72.0 2009-09-24

* 2 major enhancements:
  * evaluate javascript in jruby
  * embed callable ruby objects in javascript